chore: updating conf files